cabal-version:      3.0
name:               flutter-nix-translator
version:            0.1.0.0

synopsis:           flutter-nix translator
description:
  Creates a flutter-nix lock file by prefetching the hosted Pub packages and
  Flutter SDK dependencies and calculating their hashes.

  Uses the pubspec lock file to calculate the URL of the Pub packages and a
  file in JSON format to calculate the URLs of the Flutter SDK dependencies.

  The pubspec lock file is passed with a command-line argument while the JSON
  file is passed with `FLUTTER_SDK_DEPENDENCIES_JSON` environment variable.

license:            MPL-2.0
author:             ilkecan
maintainer:         ilkecan@protonmail.com

data-dir:           data
data-files:
  fetch-pub.nix

common shared-properties
  default-language: Haskell2010
  build-depends:
    base >=4.11 && <5.0,

  ghc-options:
    -fwrite-ide-info
    -Wall
    -Werror
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

executable translator
  import:           shared-properties
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    Cli
    Lock
    Paths_flutter_nix_translator
    Prefetch.SdkDependency
    Prefetch.PubPackage
    Types.FlutterNixLock
    Types.PubSpec
    Types.SdkDependency
  autogen-modules:
    Paths_flutter_nix_translator
  build-depends:
    aeson,
    containers,
    extra,
    optparse-applicative,
    process,
    text,
    transformers,
    yaml,
