cabal-version:      3.0
name:               flutter-nix-translator
version:            0.1.0.0

synopsis:           flutter-nix translator
description:
  Creates a flutter-nix lock file in JSON necessary to build the Flutter app in
  Nix sandbox.

  Pubspec file is used to get the name and the version of the Flutter app.
  Pubspec lock file is used to calculate the URL of the Pub packages and
  prefetch them to calculate their hashes.

  A file in JSON format is used to calculate the URLs of the Flutter SDK
  dependencies. This file is considered an implementation detail and passed to
  the translator with an environment variable.

license:            MPL-2.0
author:             ilkecan
maintainer:         ilkecan@protonmail.com

data-dir:           data
data-files:
  fetch-pub.nix

common shared-properties
  default-language: Haskell2010
  build-depends:
    base >=4.11 && <5.0,

  ghc-options:
    -fwrite-ide-info
    -Wall
    -Werror
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

  default-extensions:
    StrictData,

executable translator
  import:           shared-properties
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    Cli
    Lock
    Log
    Paths_flutter_nix_translator
    Prefetch.PubPackage
    Prefetch.SdkDependency
    Types.FlutterNixLock
    Types.HashCache
    Types.PubSpec
    Types.PubSpecLock
    Types.SdkDependencies
  autogen-modules:
    Paths_flutter_nix_translator
  build-depends:
    aeson,
    aeson-pretty,
    async,
    bytestring,
    containers,
    extra,
    co-log,
    optparse-applicative,
    process,
    text,
    transformers,
    unordered-containers,
    vector,
    yaml,
